reorganize directories before pull in winter school changes

--- a/NA_landcover.Rmd
+++ b/NA_landcover.Rmd
@@ -9,11 +9,12 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 library(raster)
-library(rasterVis)
 library(tidyverse)
 library(mgcv)
 library(SPEI)
 library(fields)
+#devtools::install_github("MatMatt/MODIS", ref = "develop")
+library(MODIS)
 ```
 
 ```{r}
@@ -23,7 +24,7 @@ temp <- brick('Data/CHELSA/temp.nc') %>% crop(bbox)
 t_warm <- max(temp)
 t_cold <- min(temp)
 alpha <- raster('Data/CHELSA/alpha.nc') %>% crop(bbox)
-gdd5 <- raster('gdd5_global.tif') %>% crop(bbox)
+gdd5 <- raster('Data/gdd5_global.tif') %>% crop(bbox)
 
 modern_predictors <- brick(c(t_warm, t_cold, alpha,gdd5))
 names(modern_predictors) <- c('t_warm', 't_cold', 'alpha', 'gdd5')
@@ -31,11 +32,101 @@ rm(temp, t_warm, t_cold, alpha, gdd5)
 
 plot(modern_predictors)
 ```
+Import Modis PFT data
+```{r}
+#lpdaacLogin()
+MODISoptions(localArcPath = '~/MODIS/', outDirPath = 'Data/MODIS', dlmethod = 'wget', MODISserverOrder = 'LPDAAC', quiet = T)
+MODISoptions()
+pft <- runGdal('MCD12Q1', collection = '051', extent = bbox, SDSstring = "0000100000000000", begin = '2001-01-01', end = '2001-01-01')
 
-Load a ppreviously fitted gam model
+pft <- raster('Data/MODIS/MCD12Q1.051_20170918110118/MCD12Q1.A2001001.Land_Cover_Type_5.tif')
+
+modern_predictors <- projectRaster(modern_predictors, pft)
+names(pft) <- 'pft'
+plot(pft)
+plot(pft, modern_predictors)
+
+
+  test <- pft %>%
+  as.data.frame(xy = T, na.rm = T) #%>%
+  filter(!pft %in% c(0, 7:10)) %>%
+  mutate(pft = recode_factor(as.factor(pft),
+                               `1` = 'Evergreen Needleleaf trees',
+                               `2` = 'Evergreen Broadleaf trees',
+                               `3` = 'Deciduous Needleleaf trees',
+                               `4` = 'Deciduous Broadleaf trees',
+                               `5` = 'Shrub',
+                               `6` = 'Grass',
+                               `11` = 'Barren or sparse vegetation'))
+
+lc_colors <- c('#016400', '#018200', '#97bf47','#dcce00',  '#fffbc3')
+
+ggplot(test, aes(x, y)) + 
+  geom_tile(aes(fill = pft)) + 
+  #scale_fill_manual(values = lc_colors) + 
+  theme_void() + 
+  coord_fixed()
+```
+
+
+```{r}
+dat <- brick(c(pft, modern_predictors)) %>%
+  as.data.frame(xy = T, na.rm = T) %>%
+  filter(!pft %in% c(0, 7:10)) %>%
+  mutate(pft = recode_factor(as.factor(pft),
+                               `1` = 'Evergreen Needleleaf trees',
+                               `2` = 'Evergreen Broadleaf trees',
+                               `3` = 'Deciduous Needleleaf trees',
+                               `4` = 'Deciduous Broadleaf trees',
+                               `5` = 'Shrub',
+                               `6` = 'Grass',
+                               `11` = 'Barren or sparse vegetation')) %>%
+  mutate(pft_class = as.numeric(pft)) %>%
+  mutate(pft_class = if_else(pft_class == 7, 0, pft_class))
+
+
+sample_guide <- dat %>% group_by(pft) %>% count %>% mutate(n  = ifelse(n > 300000, 30000, n))
+dat2 <- dat %>% nest(-pft) %>% left_join(sample_guide) %>% mutate(Sample = map2(data, n, sample_n)) %>% unnest(Sample)
+```
+
+```{r}
+mod <- gam(list(pft_class
+                 ~ s(alpha, bs = 'cr') + s(gdd5, bs = 'cr') + s(t_cold, bs = 'cr') + s(t_warm, bs = 'cr'),
+                 ~ s(alpha, bs = 'cr') + s(gdd5, bs = 'cr') + s(t_cold, bs = 'cr') + s(t_warm, bs = 'cr'),
+                 ~ s(alpha, bs = 'cr') + s(gdd5, bs = 'cr') + s(t_cold, bs = 'cr') + s(t_warm, bs = 'cr'),
+                 ~ s(alpha, bs = 'cr') + s(gdd5, bs = 'cr') + s(t_cold, bs = 'cr') + s(t_warm, bs = 'cr'),
+                 ~ s(alpha, bs = 'cr') + s(gdd5, bs = 'cr') + s(t_cold, bs = 'cr') + s(t_warm, bs = 'cr'),
+                 ~ s(alpha, bs = 'cr') + s(gdd5, bs = 'cr') + s(t_cold, bs = 'cr') + s(t_warm, bs = 'cr')), 
+           family = multinom(K = 6), method = 'REML', select = F, data = dat2, optimizer = 'perf')
+
+saveRDS(mod, 'mod')
+mod2 <- readRDS('mod2')
+
+mod2 <- mod
+summary(mod2)
+plot(mod2, scale = 0)
+
+predictions <- predict(preds2, mod2, type = 'response', index = 1:9)
+names(predictions) <- dat2$megabiome %>% levels
+levelplot(predictions)
+
+biome.preds <- which.max(predictions) %>% as.data.frame(na.rm = T, xy = T)
+
+ggplot(biome.preds, aes(x, y)) + 
+  geom_tile(aes(fill = as.factor(layer))) + 
+  scale_fill_brewer(palette = 'Paired') + 
+  theme_void() + 
+  coord_fixed()
+mod2$aic
+```
+
+
+Load a previously fitted gam model
 ```{r}
 veg_gam <- readRDS('mod2')
 mod_predictions <- predict(modern_predictors, veg_gam, type = 'response', index = 1:9)
+
+rasterVis::levelplot(mod_predictions)
 
 uncertainty <- mod_predictions %>% 
   as.data.frame(na.rm = T, xy = T) %>%
